# Kinect-Registration

./: CMakeLists.txt  README.txt  kinReg.cpp
cmake/find/: FindFreenect.cmake
include/libfreenect/: CMakeLists.txt
include/libfreenect/wrappers/opencv/: CMakeLists.txt  libfreenect_cv.c  libfreenect_cv.h
